added login and register form. user can now register

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+html, body, :root {
+	height: 100%
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.form-shadow {
+	box-shadow: 5px 5px 10px rgba(0, 0, 0, .2);
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.main-color {
+	background: #3C5240
+}
+
+.disabled-button {
+	background: #627F68
+}
+
+.border-main-color {
+	border-color: #3C5240
+}
+
+.black-transparent {
+	background: rgba(0, 0, 0, .25)
 }
